# rust_xlsxwriter

./: .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE_Apache2.0  LICENSE_MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: rust.yml  rust_chrono_jiff.yml  rust_chrono_tests.yml  rust_clippy.yml  rust_constant_memory_tests.yml  rust_decimal_tests.yml  rust_default_tests.yml  rust_docs.yml  rust_examples.yml  rust_fmt.yml  rust_polars_tests.yml  rust_regex_lite_tests.yml  rust_resave_tests.yml  rust_ryu_tests.yml  rust_serde_chrono_tests.yml  rust_serde_constant_memory_tests.yml  rust_serde_jiff_tests.yml  rust_serde_tests.yml  rust_wasm_tests.yml  spelling.yml
benches/: README.md  float_formatting.rs  number_formatting.rs  write_performance.rs
examples/: Readme.md  app_array_formula.rs  app_autofilter.rs  app_autofit.rs  app_background_image.rs  app_chart.rs  app_chart_3d.rs  app_chart_area.rs  app_chart_bar.rs  app_chart_clustered.rs  app_chart_column.rs  app_chart_combined.rs  app_chart_data_table.rs  app_chart_data_tools.rs  app_chart_doughnut.rs  app_chart_gauge.rs  app_chart_gradient.rs  app_chart_line.rs  app_chart_pareto.rs  app_chart_pattern.rs  app_chart_pie.rs  app_chart_radar.rs  app_chart_scatter.rs  app_chart_secondary_axis.rs  app_chart_stock.rs  app_chart_styles.rs  app_chart_tutorial1.rs  app_chart_tutorial2.rs  app_chart_tutorial3.rs  app_chart_tutorial4.rs  app_chartex_charts.rs  app_chartsheet.rs  app_checkbox.rs  app_colors.rs  app_conditional_formatting.rs  app_data_validation.rs  app_defined_name.rs  app_demo.rs  app_doc_properties.rs  app_dynamic_arrays.rs  (+543 more)
macros/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
macros/src/: lib.rs
rust_xlsxwriter_derive/: Cargo.toml
rust_xlsxwriter_derive/src/: lib.rs
src/: app.rs  button.rs  changelog.rs  chart.rs  color.rs  comment.rs  conditional_format.rs  content_types.rs  cookbook.rs  core.rs  custom.rs  data_validation.rs  datetime.rs  drawing.rs  error.rs  feature_property_bag.rs  filter.rs  format.rs  formula.rs  hyperlink.rs  image.rs  lib.rs  macros.rs  metadata.rs  note.rs  packager.rs  performance.rs  properties.rs  protection.rs  relationship.rs  rich_value.rs  rich_value_rel.rs  rich_value_structure.rs  rich_value_types.rs  serializer.rs  shape.rs  shared_strings.rs  shared_strings_table.rs  sparkline.rs  styles.rs  (+10 more)
src/app/: tests.rs
src/chart/: chartex_styles.rs  tests.rs
src/color/: tests.rs
src/conditional_format/: tests.rs
src/content_types/: tests.rs
src/core/: tests.rs
src/custom/: tests.rs
src/data_validation/: tests.rs
src/datetime/: tests.rs
src/drawing/: tests.rs
src/error/: tests.rs
src/format/: tests.rs
src/formula/: tests.rs
src/image/: tests.rs
src/relationship/: tests.rs
src/shared_strings/: tests.rs
src/shared_strings_table/: tests.rs
src/sparkline/: tests.rs
src/styles/: tests.rs
src/table/: tests.rs
src/theme/: tests.rs
src/url/: tests.rs
src/utility/: tests.rs
src/vml/: tests.rs
src/workbook/: tests.rs
src/worksheet/: tests.rs
src/xmlwriter/: tests.rs
tests/: array_formula01.rs  array_formula02.rs  array_formula03.rs  array_formula04.rs  autofilter00.rs  autofilter01.rs  autofilter02.rs  autofilter03.rs  autofilter04.rs  autofilter05.rs  autofilter06.rs  autofilter07.rs  autofilter08.rs  autofilter09.rs  autofilter10.rs  autofilter11.rs  autofit01.rs  autofit02.rs  autofit03.rs  autofit04.rs  autofit05.rs  autofit06.rs  autofit07.rs  autofit08.rs  autofit09.rs  autofit10.rs  autofit11.rs  autofit12.rs  autofit13.rs  bootstrap01.rs  bootstrap02.rs  bootstrap03.rs  bootstrap04.rs  bootstrap05.rs  bootstrap06.rs  bootstrap07.rs  bootstrap08.rs  bootstrap09.rs  bootstrap10.rs  bootstrap11.rs  (+525 more)
tests/common/: mod.rs
tests/input/: bootstrap01.xlsx  bootstrap02.xlsx  bootstrap03.xlsx  bootstrap04.xlsx  bootstrap05.xlsx  bootstrap06.xlsx  bootstrap07.xlsx  bootstrap08.xlsx  bootstrap09.xlsx  bootstrap10.xlsx  bootstrap11.xlsx  bootstrap12.xlsx  bootstrap13.xlsx  bootstrap14.xlsx  bootstrap15.xlsx  bootstrap16.xlsx  bootstrap17.xlsx  bootstrap18.xlsx  bootstrap19.xlsx  bootstrap20.xlsx  bootstrap21.xlsx  bootstrap22.xlsx  bootstrap23.xlsx  bootstrap24.xlsx  bootstrap25.xlsx  bootstrap26.xlsx  bootstrap27.xlsx  bootstrap28.xlsx  bootstrap29.xlsx  bootstrap30.xlsx  bootstrap31.xlsx  bootstrap32.xlsx  bootstrap33.xlsx  bootstrap34.xlsx  bootstrap35.xlsx  bootstrap36.xlsx  bootstrap37.xlsx  bootstrap38.xlsx  bootstrap39.xlsx  bootstrap40.xlsx  (+164 more)
tests/input/images/: unknown.img
tests/integration/: array_formula01.rs  array_formula02.rs  array_formula03.rs  array_formula04.rs  autofilter00.rs  autofilter01.rs  autofilter02.rs  autofilter03.rs  autofilter04.rs  autofilter05.rs  autofilter06.rs  autofilter07.rs  autofilter08.rs  autofilter09.rs  autofilter10.rs  autofilter11.rs  autofit01.rs  autofit02.rs  autofit03.rs  autofit04.rs  autofit05.rs  autofit06.rs  autofit07.rs  autofit08.rs  autofit09.rs  autofit10.rs  autofit11.rs  autofit12.rs  autofit13.rs  autofit14.rs  background01.rs  background02.rs  background03.rs  background04.rs  background05.rs  background06.rs  background07.rs  bootstrap01.rs  bootstrap02.rs  bootstrap03.rs  (+1062 more)
tests/integration/common/: mod.rs
