[package]
name = "rust_xlsxwriter"
description = "A Rust library for writing Excel 2007 xlsx files"
authors = ["John McNamara <jmcnamara@cpan.org>"]
homepage = "https://rustxlsxwriter.github.io"
repository = "https://github.com/jmcnamara/rust_xlsxwriter"
keywords = ["excel", "xlsx"]
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.64.2"
edition = "2021"

[dependencies]
chrono = {version = "0.4.31", default-features = false, features = ["clock", "wasmbind", "serde"], optional = true}
zip = {version = "0.6.4 ", default-features = false, features = ["deflate"]}
regex = "1.7.3"
lazy_static = "1.4.0"
polars= {version = "0.38.3", default-features = false, features = [], optional = true}
js-sys = {version = "0.3.64", optional = true}
wasm-bindgen = {version = "0.2.87", optional = true}
serde = {version = "1.0.193", features = ["derive"], optional = true}
rust_xlsxwriter_derive = {version = "0.2.0", optional = true}

[dev-dependencies]
pretty_assertions = "1.3.0"

[features]
# `default`: Includes all the standard functionality.
default = []

# `zlib`: Adds a dependency on zlib and a C compiler. This includes the same
#  features as `default` but is 1.5x faster for large files.
zlib = ["zip/deflate-zlib"]

# `chrono`: Add support for Chrono dates/times in addition to the native
# ExcelDateTime types.
chrono = ["dep:chrono"]

# `polars`: Add support for mapping between `PolarsError` and
# `rust_xlsxwriter::XlsxError` to make code that handles both types of error
# easier to write.
polars = ["dep:polars"]

# `serde`: Adds supports for Serde serialization.
serde = ["dep:serde", "dep:rust_xlsxwriter_derive"]

# `wasm`: Enable wasm/Javascript compilation.
wasm = ["js-sys", "wasm-bindgen"]

# `test-resave`: Developer only testing feature.
test-resave = []

# Turn off default testing of the docs beacuse it is slow. It can still be done
# explicitly using the --doc flag and it is also tested in the CI.
[lib]
doctest = false

#
# Examples to run only when `chrono` is enabled.
#
[[example]]
name = "doc_worksheet_write_datetime_chrono"
path = "examples/doc_worksheet_write_datetime_chrono.rs"
required-features = ["chrono"]

[[example]]
name = "doc_worksheet_write_date_chrono"
path = "examples/doc_worksheet_write_date_chrono.rs"
required-features = ["chrono"]

[[example]]
name = "doc_worksheet_write_time_chrono"
path = "examples/doc_worksheet_write_time_chrono.rs"
required-features = ["chrono"]

[[example]]
name = "doc_properties_checksum2_chrono"
path = "examples/doc_properties_checksum2_chrono.rs"
required-features = ["chrono"]

#
# Examples to run only when `serde` is enabled.
#
[[example]]
name = "app_serialize"
path = "examples/app_serialize.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_deserialize_headers1"
path = "examples/doc_worksheet_deserialize_headers1.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize"
path = "examples/doc_worksheet_serialize.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_dimensions1"
path = "examples/doc_worksheet_serialize_dimensions1.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_dimensions2"
path = "examples/doc_worksheet_serialize_dimensions2.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers1"
path = "examples/doc_worksheet_serialize_headers1.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers2"
path = "examples/doc_worksheet_serialize_headers2.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers3"
path = "examples/doc_worksheet_serialize_headers3.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers4"
path = "examples/doc_worksheet_serialize_headers4.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_custom"
path = "examples/doc_worksheet_serialize_headers_custom.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_format1"
path = "examples/doc_worksheet_serialize_headers_format1.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_format2"
path = "examples/doc_worksheet_serialize_headers_format2.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_format3"
path = "examples/doc_worksheet_serialize_headers_format3.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_format4"
path = "examples/doc_worksheet_serialize_headers_format4.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_format5"
path = "examples/doc_worksheet_serialize_headers_format5.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_format6"
path = "examples/doc_worksheet_serialize_headers_format6.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_format7"
path = "examples/doc_worksheet_serialize_headers_format7.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_format8"
path = "examples/doc_worksheet_serialize_headers_format8.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_hide"
path = "examples/doc_worksheet_serialize_headers_hide.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_rename1"
path = "examples/doc_worksheet_serialize_headers_rename1.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_rename2"
path = "examples/doc_worksheet_serialize_headers_rename2.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_skip1"
path = "examples/doc_worksheet_serialize_headers_skip1.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_skip2"
path = "examples/doc_worksheet_serialize_headers_skip2.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_skip3"
path = "examples/doc_worksheet_serialize_headers_skip3.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_with_options"
path = "examples/doc_worksheet_serialize_headers_with_options.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_headers_with_options2"
path = "examples/doc_worksheet_serialize_headers_with_options2.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_intro"
path = "examples/doc_worksheet_serialize_intro.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_intro2"
path = "examples/doc_worksheet_serialize_intro2.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_table1"
path = "examples/doc_worksheet_serialize_table1.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_table2"
path = "examples/doc_worksheet_serialize_table2.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_table3"
path = "examples/doc_worksheet_serialize_table3.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_vectors"
path = "examples/doc_worksheet_serialize_vectors.rs"
required-features = ["serde"]

[[example]]
name = "doc_xlsxserialize_column_width"
path = "examples/doc_xlsxserialize_column_width.rs"
required-features = ["serde"]

[[example]]
name = "doc_xlsxserialize_field_header_format"
path = "examples/doc_xlsxserialize_field_header_format.rs"
required-features = ["serde"]

[[example]]
name = "doc_xlsxserialize_header_format"
path = "examples/doc_xlsxserialize_header_format.rs"
required-features = ["serde"]

[[example]]
name = "doc_xlsxserialize_header_format_reuse"
path = "examples/doc_xlsxserialize_header_format_reuse.rs"
required-features = ["serde"]

[[example]]
name = "doc_xlsxserialize_hide_headers"
path = "examples/doc_xlsxserialize_hide_headers.rs"
required-features = ["serde"]

[[example]]
name = "doc_xlsxserialize_intro"
path = "examples/doc_xlsxserialize_intro.rs"
required-features = ["serde"]

[[example]]
name = "doc_xlsxserialize_num_format"
path = "examples/doc_xlsxserialize_num_format.rs"
required-features = ["serde"]

[[example]]
name = "doc_xlsxserialize_rename"
path = "examples/doc_xlsxserialize_rename.rs"
required-features = ["serde"]

[[example]]
name = "doc_xlsxserialize_skip"
path = "examples/doc_xlsxserialize_skip.rs"
required-features = ["serde"]

[[example]]
name = "doc_xlsxserialize_skip2"
path = "examples/doc_xlsxserialize_skip2.rs"
required-features = ["serde"]

[[example]]
name = "doc_xlsxserialize_table"
path = "examples/doc_xlsxserialize_table.rs"
required-features = ["serde"]

[[example]]
name = "doc_xlsxserialize_table_default"
path = "examples/doc_xlsxserialize_table_default.rs"
required-features = ["serde"]

[[example]]
name = "doc_xlsxserialize_table_style"
path = "examples/doc_xlsxserialize_table_style.rs"
required-features = ["serde"]

[[example]]
name = "doc_xlsxserialize_value_format"
path = "examples/doc_xlsxserialize_value_format.rs"
required-features = ["serde"]


#
# Examples to run only when `serde` and `chrono` is enabled.
#
[[example]]
name = "doc_worksheet_serialize_datetime1"
path = "examples/doc_worksheet_serialize_datetime1.rs"
required-features = ["serde"]

[[example]]
name = "doc_worksheet_serialize_datetime2"
path = "examples/doc_worksheet_serialize_datetime2.rs"
required-features = ["serde", "chrono"]

[[example]]
name = "doc_worksheet_serialize_datetime3"
path = "examples/doc_worksheet_serialize_datetime3.rs"
required-features = ["serde", "chrono"]

[[example]]
name = "doc_worksheet_serialize_datetime4"
path = "examples/doc_worksheet_serialize_datetime4.rs"
required-features = ["serde", "chrono"]

[[example]]
name = "doc_worksheet_serialize_datetime5"
path = "examples/doc_worksheet_serialize_datetime5.rs"
required-features = ["serde", "chrono"]


# Workaround to display feature specific docs.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.commands]
# Some local package management and release check commands.
# Uses Cargo Commander.

spellcheck = {cmd = [
    "for f in src/*.rs; do aspell --lang=en_US --check $f; done",
    "for f in examples/*.rs; do aspell --lang=en_US --check $f; done",
    "aspell --lang=en_US --check examples/README.md",
    "aspell --lang=en_US --check README.md"
]}

coverage = {cmd = [
    "rm -rf target/coverage",
    "mkdir -p target/coverage",
    "CARGO_INCREMENTAL=0 RUSTFLAGS='-Cinstrument-coverage' LLVM_PROFILE_FILE='target/coverage/rust_xlsxwriter-%p-%m.profraw' cargo test",
    "grcov target/coverage/ --binary-path ./target/debug/deps/ -s src -t lcov --branch -o target/coverage/lcov.info",
    "grcov target/coverage/ --binary-path ./target/debug/deps/ -s src -t html --branch -o target/coverage/html",
    "rm target/coverage/*.profraw",
    "open target/coverage/html/index.html"
]}

release_check = {cmd = ["../release/release_check.sh"]}

# Profile
# cargo instruments -t time --example app_perf_test
